update zh_cn for 6.3.0

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -1987,7 +1987,7 @@
 
     "info.urushi.rock": "放置于滴水石锥下方后会变成蚀刻石块",
 
-    "info.urushi.sazare_ishi": "在石块上方放置滴水石坠以获得",
+    "info.urushi.sazare_ishi": "在石块上方放置滴水石锥以获得",
 
     "info.urushi.slot_rice_cauldron": "输入：上面；输出：其他面",
 
@@ -2555,7 +2555,60 @@
    "item.urushi.shrimp_sushi": "鲜虾寿司",
    "entity.urushi.shrimp_sushi_food": "鲜虾寿司",
    "info.urushi.doubled_wooden_cabinetry_sort_button": "整理",
-   "info.urushi.senbakoki": "Use Rice Ears on Senbakoki to obtain Raw Rice and Straw."
+   "info.urushi.senbakoki": "对千齿脱粒机使用稻穗，可以获得糙米和稻杆",
+   "info.urushi.custom_heads_creator": "头颅制作者：",
+   "info.urushi.rice_ball": "合成时填入不同的馅料，吃下去就会发生什么事情……？",
+   "info.urushi.rice_ball_with_filling": "填入了馅料。吃下去时会发生什么呢？",
+   "block.urushi.kakejiku_15": "挂轴",
+   "block.urushi.kakejiku_16": "挂轴",
+   "block.urushi.kakejiku_17": "挂轴",
+   "block.urushi.kakejiku_18": "挂轴",
+   "block.urushi.kakejiku_19": "挂轴",
+   "block.urushi.tea_bush": "茶叶树丛",
+   "item.urushi.tea_leaf": "茶叶",
+   "item.urushi.green_tea": "绿茶",
+   "block.urushi.hibachi": "火盆",
+   "block.urushi.kettle": "茶壶",
+   "container.urushi.kettle": "茶壶",
+   "block.urushi.shiitake_block": "香菇块",
+   "block.urushi.coin": "古钱",
+   "info.urushi.kettle": "下方放置有火盆、营火、或土灶时，可以放入茶叶与水竹筒",
+   "item.urushi.silk": "绢布",
+   "item.urushi.white_silk": "白色绢布",
+   "item.urushi.orange_silk": "橙色绢布",
+   "item.urushi.magenta_silk": "品红色绢布",
+   "item.urushi.light_blue_silk": "淡蓝色绢布",
+   "item.urushi.yellow_silk": "黄色绢布",
+   "item.urushi.lime_silk": "黄绿色绢布",
+   "item.urushi.pink_silk": "粉色绢布",
+   "item.urushi.gray_silk": "灰色绢布",
+   "item.urushi.light_gray_silk": "淡灰色绢布",
+   "item.urushi.cyan_silk": "青色绢布",
+   "item.urushi.purple_silk": "紫色绢布",
+   "item.urushi.blue_silk": "蓝色绢布",
+   "item.urushi.brown_silk": "棕色绢布",
+   "item.urushi.green_silk": "绿色绢布",
+   "item.urushi.red_silk": "红色绢布",
+   "item.urushi.black_silk": "黑色绢布",
+   "block.urushi.silk_block": "绢布块",
+   "block.urushi.white_silk_block": "白色绢布块",
+   "block.urushi.orange_silk_block": "橙色绢布块",
+   "block.urushi.magenta_silk_block": "品红色绢布块",
+   "block.urushi.light_blue_silk_block": "淡蓝色绢布块",
+   "block.urushi.yellow_silk_block": "黄色绢布块",
+   "block.urushi.lime_silk_block": "黄绿色绢布块",
+   "block.urushi.pink_silk_block": "粉色绢布块",
+   "block.urushi.gray_silk_block": "灰色绢布块",
+   "block.urushi.light_gray_silk_block": "淡灰色绢布块",
+   "block.urushi.cyan_silk_block": "青色绢布块",
+   "block.urushi.purple_silk_block": "紫色绢布块",
+   "block.urushi.blue_silk_block": "蓝色绢布块",
+   "block.urushi.brown_silk_block": "棕色绢布块",
+   "block.urushi.green_silk_block": "绿色绢布块",
+   "block.urushi.red_silk_block": "红色绢布块",
+   "block.urushi.black_silk_block": "黑色绢布块",
+   "item.urushi.kakuriyo_villager_spawn_egg": "幽世村民刷怪蛋",
+   "entity.urushi.kakuriyo_villager": "幽世村民"
 
 
 }
