--- a/src/main/resources/assets/urushi/lang/en_us.json
+++ b/src/main/resources/assets/urushi/lang/en_us.json
@@ -732,7 +732,7 @@
 
     "info.urushi.noodleknife": "Do some noodle-doodle cutting stuff!",
 
-    "info.urushi.saltandsand": "In Ocean or Beach biomes, Sand in contact with water transforms into this.",
+    "info.urushi.saltandsand": "In Ocean or Beach biomes, Sand locate above sea leavel transform into this when Water attached.",
 
 
    "block.urushi.dirt_furnace": "Dirt Furnace",
@@ -1121,9 +1121,9 @@
 
     "itemGroup.urushi_food": "Urushi-Cooking",
 
-    "info.urushi.ghost_block": "A kind of passable translucent block.",
+    "info.urushi.ghost_block": "It becomes passable and translucent when recieved redstone signal.",
 
-    "info.urushi.ghost_block2": "Mimics the normal block when powered by redstone.",
+    "info.urushi.ghost_block2": "Mimics the normal block when not provided redstone signal.",
 
     "block.urushi.japanese_cedar_fushiranma": "Japanese Cedar Fushiranma",
 
@@ -2558,5 +2558,58 @@
    "item.urushi.shrimp_sushi": "Shrimp Sushi",
    "entity.urushi.shrimp_sushi_food": "Shrimp Sushi",
    "info.urushi.doubled_wooden_cabinetry_sort_button": "Sort",
-   "info.urushi.senbakoki": "Use Rice Ears on Senbakoki to obtain Raw Rice and Straw."
+   "info.urushi.senbakoki": "Use Rice Ears on Senbakoki to obtain Raw Rice and Straw.",
+   "info.urushi.rice_ball": "Something will happen when you eat depends on what a filling you put when crafting.",
+   "info.urushi.rice_ball_with_filling": "This has a filling. Something will happen when you eat.",
+   "block.urushi.kakejiku_15": "Kakejiku",
+   "block.urushi.kakejiku_16": "Kakejiku",
+   "block.urushi.kakejiku_17": "Kakejiku",
+   "block.urushi.kakejiku_18": "Kakejiku",
+   "block.urushi.kakejiku_19": "Kakejiku",
+   "block.urushi.tea_bush": "Tea Bush",
+   "item.urushi.tea_leaf": "Tea Leaf",
+   "item.urushi.green_tea": "Green Tea",
+   "block.urushi.hibachi": "Hibachi",
+   "block.urushi.kettle": "Kettle",
+   "container.urushi.kettle": "Kettle",
+   "block.urushi.shiitake_block": "Shiitake Block",
+   "block.urushi.coin": "Coin",
+   "info.urushi.kettle": "Place Hibachi, Campfire, or Furnace below and put Tea Leaf and a Water Bamboo Cup in it to make a Green Tea.",
+   "item.urushi.silk": "Silk Cloth",
+   "item.urushi.white_silk": "White Silk Cloth",
+   "item.urushi.orange_silk": "Orange Silk Cloth",
+   "item.urushi.magenta_silk": "Magenta Silk Cloth",
+   "item.urushi.light_blue_silk": "Light Blue Silk Cloth",
+   "item.urushi.yellow_silk": "Yellow Silk Cloth",
+   "item.urushi.lime_silk": "Lime Silk Cloth",
+   "item.urushi.pink_silk": "Pink Silk Cloth",
+   "item.urushi.gray_silk": "Gray Silk Cloth",
+   "item.urushi.light_gray_silk": "Light Gray Silk Cloth",
+   "item.urushi.cyan_silk": "Cyan Silk Cloth",
+   "item.urushi.purple_silk": "Purple Silk Cloth",
+   "item.urushi.blue_silk": "Blue Silk Cloth",
+   "item.urushi.brown_silk": "Brown Silk Cloth",
+   "item.urushi.green_silk": "Green Silk Cloth",
+   "item.urushi.red_silk": "Red Silk Cloth",
+   "item.urushi.black_silk": "Black Silk Cloth",
+   "block.urushi.silk_block": "Silk Cloth Block",
+   "block.urushi.white_silk_block": "White Silk Cloth Block",
+   "block.urushi.orange_silk_block": "Orange Silk Cloth Block",
+   "block.urushi.magenta_silk_block": "Magenta Silk Cloth Block",
+   "block.urushi.light_blue_silk_block": "Light Blue Silk Cloth Block",
+   "block.urushi.yellow_silk_block": "Yellow Silk Cloth Block",
+   "block.urushi.lime_silk_block": "Lime Silk Cloth Block",
+   "block.urushi.pink_silk_block": "Pink Silk Cloth Block",
+   "block.urushi.gray_silk_block": "Gray Silk Cloth Block",
+   "block.urushi.light_gray_silk_block": "Light Gray Silk Cloth Block",
+   "block.urushi.cyan_silk_block": "Cyan Silk Cloth Block",
+   "block.urushi.purple_silk_block": "Purple Silk Cloth Block",
+   "block.urushi.blue_silk_block": "Blue Silk Cloth Block",
+   "block.urushi.brown_silk_block": "Brown Silk Cloth Block",
+   "block.urushi.green_silk_block": "Green Silk Cloth Block",
+   "block.urushi.red_silk_block": "Red Silk Cloth Block",
+   "block.urushi.black_silk_block": "Black Silk Cloth Block",
+   "item.urushi.kakuriyo_villager_spawn_egg": "Kakuriyo Villager Spawn Egg",
+   "entity.urushi.kakuriyo_villager": "Kakuriyo Villager",
+   "info.urushi.hibachi": "Put a Kettle above to make a green tea."
 }
