add readme for pdn files

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2608,7 +2608,15 @@
    "block.urushi.red_silk_block": "红色绢布块",
    "block.urushi.black_silk_block": "黑色绢布块",
    "item.urushi.kakuriyo_villager_spawn_egg": "幽世村民刷怪蛋",
-   "entity.urushi.kakuriyo_villager": "幽世村民"
+   "entity.urushi.kakuriyo_villager": "幽世村民",
+   "info.urushi.hibachi": "在上方放置茶壶以制作绿茶",
+   "sound.urushi.urushi_advancements": "漆MOD：获得成就",
+   "entity.urushi.green_tea_food": "绿茶",
+   "item.urushi.mandarin": "みかん",
+   "item.urushi.mandarin_slice": "剥いたみかん",
+   "block.urushi.mandarin_sapling": "みかんの苗木",
+   "block.urushi.mandarin_leaves": "みかんの葉",
+   "block.urushi.kotatsu": "こたつ"
 
 
 }
