--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -2610,9 +2610,10 @@
    "item.urushi.kakuriyo_villager_spawn_egg": "幽世村民刷怪蛋",
    "entity.urushi.kakuriyo_villager": "幽世村民",
    "info.urushi.hibachi": "在上方放置茶壶以制作绿茶",
-   "sound.urushi.urushi_advancements": "漆MOD：获得成就",
+   "sounds.urushi.urushi_advancements": "漆MOD：获得成就",
    "entity.urushi.green_tea_food": "绿茶",
    "item.urushi.mandarin": "橘子",
+   "entity.urushi.mandarin_food": "橘子",
    "item.urushi.mandarin_slice": "橘子瓣",
    "block.urushi.mandarin_sapling": "橘树树苗",
    "block.urushi.mandarin_leaves": "橘树树叶",
