sync changes with ja_jp, not translated yet, need to see changes on Furiganas and Kobore-sakura

--- a/src/main/resources/assets/urushi/lang/zh_cn.json
+++ b/src/main/resources/assets/urushi/lang/zh_cn.json
@@ -1061,6 +1061,10 @@
 
   "block.urushi.jadeite_ore": "翡翠矿石",
 
+  "block.urushi.yomi_copper_ore": "黄泉铜矿石",
+
+  "block.urushi.yomi_iron_ore": "黄泉铁矿石",
+
   "block.urushi.yomi_gold_ore": "黄泉金矿石",
 
   "block.urushi.quartz_cluster": "石英簇",
@@ -1158,6 +1162,8 @@
   "info.urushi.water_element_of_block": "水气方块",
 
   "info.urushi.blank": "   ",
+
+  "info.urushi.miningSpeedChanger1": "在物品栏内时，挖掘速度",
 
   "info.urushi.sandpaper_block": "使用活塞推动以打磨附近的方块",
 
@@ -1915,7 +1921,7 @@
 
     "block.urushi.pendant_light": "吊灯",
 
-    "block.urushi.concrete_block_wall": "混凝土墙",
+    "block.urushi.concrete_wall": "混凝土墙",
 
     "block.urushi.hot_ironsand": "热砂铁",
 
@@ -2254,7 +2260,7 @@
     "gui.jei.category.urushi.metal_element_tier2_crafting": "仪式",
     "gui.jei.category.urushi.water_element_tier2_crafting": "仪式",
     "info.urushi.hokora": "右击或使用漏斗以放入指定物品，每个物品可产生5点对应灵力",
-    "info.urushi.wood_hokora": "需要：甜浆果",
+    "info.urushi.wood_hokora": "需要：熟梅子",
     "info.urushi.fire_hokora": "需要：小麦",
     "info.urushi.earth_hokora": "需要：稻穗",
     "info.urushi.metal_hokora": "需要：葱",
@@ -2414,8 +2420,6 @@
   "block.urushi.metal_element_emitter_tier2": "翡翠金气喷口",
   "block.urushi.water_element_emitter_tier2": "翡翠水气喷口",
   "container.urushi_auto_crafting_table": "自动工作台",
-  "block.urushi.limonite_ore": "褐铁矿石",
-   "block.urushi.chalcopyrite_ore": "黄铜矿石",
    "key.urushi.category": "漆MOD",
    "key.urushi.connectionKey": "切换方块放置时材质的连接模式",
    "block.urushi.landscape_fusuma": "风景画纸拉门",
@@ -2617,7 +2621,224 @@
    "item.urushi.mandarin_slice": "橘子瓣",
    "block.urushi.mandarin_sapling": "橘树树苗",
    "block.urushi.mandarin_leaves": "橘树树叶",
-   "block.urushi.kotatsu": "被炉"
+   "block.urushi.kotatsu": "被炉",
+  "info.urushi.furigana.ryokusyou": "緑青(りょくしょう)",
+  "info.urushi.furigana.seiroku": "青緑(せいろく)",
+  "info.urushi.furigana.kaya": "茅(かや)",
+  "info.urushi.furigana.hiwada": "檜皮(ひわだ)",
+  "info.urushi.furigana.goza": "茣蓙(ござ)",
+  "info.urushi.furigana.nozura": "野面(のづら)",
+  "info.urushi.furigana.tansu": "箪笥(たんす)",
+  "info.urushi.furigana.andon": "行燈(あんどん)",
+  "info.urushi.furigana.ariake_andon": "有明行燈(ありあけあんどん)",
+  "info.urushi.furigana.kasuga_tourou": "春日灯篭(かすがとうろう)",
+  "info.urushi.furigana.chochin": "提灯(ちょうちん)",
+  "info.urushi.furigana.giboshi": "擬宝珠(ぎぼし)",
+  "info.urushi.furigana.fusuma": "襖(ふすま)",
+  "info.urushi.furigana.sayagata": "紗綾形(さやがた)",
+  "info.urushi.furigana.seigaiha": "青海波(せいがいは)",
+  "info.urushi.furigana.noren": "暖簾(のれん)",
+  "info.urushi.furigana.tensuioke": "天水桶(てんすいおけ)",
+  "info.urushi.furigana.kaiko": "蚕(かいこ)",
+  "info.urushi.furigana.yousan": "養蚕(ようさん)",
+  "info.urushi.furigana.mayu": "繭(まゆ)",
+  "info.urushi.furigana.kinuito": "絹糸(きぬいと)",
+  "info.urushi.furigana.kempu": "絹布(けんぷ)",
+  "info.urushi.furigana.kakuriyo": "幽世(かくりよ)",
+  "info.urushi.furigana.yomi": "黄泉(よみ)",
+  "info.urushi.furigana.hisui": "翡翠(ひすい)",
+  "info.urushi.furigana.manjusyage": "曼珠沙華(まんじゅしゃげ)",
+  "info.urushi.furigana.kanazuchi": "金槌(かなづち)",
+  "info.urushi.furigana.shikkui": "漆喰(しっくい)",
+  "info.urushi.furigana.namako": "生子(なまこ)",
+  "info.urushi.furigana.kiurushi": "生漆(きうるし)",
+  "info.urushi.furigana.syuurushi": "朱漆(しゅうるし)",
+  "info.urushi.furigana.kurourushi": "黒漆(くろうるし)",
+  "info.urushi.furigana.shitamiita": "下見板張り(したみいたばり)",
+  "info.urushi.furigana.rankan": "欄干(らんかん)",
+  "info.urushi.furigana.takebushiramma": "竹節欄間(たけぶしらんま)",
+  "info.urushi.furigana.musourenji": "無双連子(むそうれんじ)",
+  "info.urushi.furigana.hinoki": "檜(ひのき)",
+  "info.urushi.furigana.urushi": "漆(うるし)",
+  "info.urushi.furigana.ramma_shoji": "欄間障子(らんましょうじ)",
+  "info.urushi.furigana.shoji_do": "障子戸(しょうじど)",
+  "info.urushi.furigana.keikaboku": "珪化木(けいかぼく)",
+  "info.urushi.furigana.kohaku": "琥珀(こはく)",
+  "info.urushi.furigana.shichirin": "七輪(しちりん)",
+  "info.urushi.furigana.sanbo": "三方(さんぼう)",
+  "info.urushi.furigana.onusa": "大幣(おおぬさ)",
+  "info.urushi.furigana.hokora": "祠(ほこら)",
+  "info.urushi.furigana.tsuta": "蔦(つた)",
+  "info.urushi.furigana.kambatsu": "旱魃(かんばつ)",
+  "info.urushi.furigana.toge": "棘(とげ)",
+  "info.urushi.furigana.janomegasa": "蛇の目傘(じゃのめがさ)",
+  "info.urushi.furigana.shide": "紙垂(しで)",
+  "info.urushi.furigana.magatama": "勾玉(まがたま)",
+  "info.urushi.furigana.hiuchigane": "火打金(ひうちがね)",
+  "info.urushi.furigana.assakuki": "圧搾機(あっさくき)",
+  "info.urushi.furigana.momi": "籾(もみ)",
+  "info.urushi.furigana.kanten": "寒天(かんてん)",
+  "info.urushi.furigana.komekouji": "米麴(こめこうじ)",
+  "info.urushi.furigana.yokan": "羊羹(ようかん)",
+  "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
+  "info.urushi.furigana.so": "蘇(そ)",
+  "info.urushi.furigana.ayu": "鮎(あゆ)",
+  "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
+  "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
+  "info.urushi.furigana.hiyayakko": "冷奴(ひややっこ)",
+  "block.urushi.concrete_block_wall": "コンクリート塀",
+  "block.urushi.limonite_ore": "褐鉄鉱",
+  "block.urushi.chalcopyrite_ore": "黄銅鉱",
+  "block.urushi.smooth_mangrove_planks": "滑らかなマングローブの板材",
+  "block.urushi.smooth_mangrove_slab": "滑らかなマングローブのハーフブロック",
+  "block.urushi.smooth_mangrove_stairs": "滑らかなマングローブの階段",
+  "block.urushi.mangrove_parapet": "マングローブの欄干",
+  "block.urushi.mangrove_framed_plaster": "マングローブの木枠付き漆喰",
+  "block.urushi.mangrove_bars": "マングローブの五本柱",
+  "block.urushi.mangrove_fushiranma": "マングローブの竹節欄間",
+  "block.urushi.mangrove_framed_wattle_and_daub": "マングローブの木枠付き土壁",
+  "block.urushi.mangrove_framed_sand_coast": "マングローブの木枠付き砂壁",
+  "block.urushi.mangrove_shitamiita": "下見板張りのマングローブの板材",
+  "block.urushi.mangrove_shitamiita_slab": "下見板張りのマングローブの板材のハーフブロック",
+  "block.urushi.mangrove_board_window": "マングローブの無双連子窓",
+  "block.urushi.mangrove_framed_orange_plaster": "マングローブの木枠付きの橙色の漆喰",
+  "block.urushi.mangrove_framed_magenta_plaster": "マングローブの木枠付きの赤紫色の漆喰",
+  "block.urushi.mangrove_framed_light_blue_plaster": "マングローブの木枠付きの空色の漆喰",
+  "block.urushi.mangrove_framed_yellow_plaster": "マングローブの木枠付きの黄色の漆喰",
+  "block.urushi.mangrove_framed_lime_plaster": "マングローブの木枠付きの黄緑色の漆喰",
+  "block.urushi.mangrove_framed_pink_plaster": "マングローブの木枠付きの桃色の漆喰",
+  "block.urushi.mangrove_framed_gray_plaster": "マングローブの木枠付きの灰色の漆喰",
+  "block.urushi.mangrove_framed_light_gray_plaster": "マングローブの木枠付きの薄灰色の漆喰",
+  "block.urushi.mangrove_framed_cyan_plaster": "マングローブの木枠付きの青緑色の漆喰",
+  "block.urushi.mangrove_framed_purple_plaster": "マングローブの木枠付きの紫色の漆喰",
+  "block.urushi.mangrove_framed_blue_plaster": "マングローブの木枠付きの青色の漆喰",
+  "block.urushi.mangrove_framed_brown_plaster": "マングローブの木枠付きの茶色の漆喰",
+  "block.urushi.mangrove_framed_green_plaster": "マングローブの木枠付きの緑色の漆喰",
+  "block.urushi.mangrove_framed_red_plaster": "マングローブの木枠付きの赤色の漆喰",
+  "block.urushi.mangrove_framed_black_plaster": "マングローブの木枠付きの黒色の漆喰",
+  "block.urushi.mangrove_wall_for_framed_blocks": "マングローブの壁",
+  "block.urushi.vertical_smooth_mangrove_slab": "滑らかなマングローブの縦ハーフブロック",
+  "block.urushi.horizontal_mangrove_bars": "マングローブの横向き五本柱",
+  "block.urushi.smooth_cherry_planks": "滑らかなサクラの板材",
+  "block.urushi.smooth_cherry_slab": "滑らかなサクラのハーフブロック",
+  "block.urushi.smooth_cherry_stairs": "滑らかなサクラの階段",
+  "block.urushi.cherry_parapet": "サクラの欄干",
+  "block.urushi.cherry_framed_plaster": "サクラの木枠付き漆喰",
+  "block.urushi.cherry_bars": "サクラの五本柱",
+  "block.urushi.cherry_fushiranma": "サクラの竹節欄間",
+  "block.urushi.cherry_framed_wattle_and_daub": "サクラの木枠付き土壁",
+  "block.urushi.cherry_framed_sand_coast": "サクラの木枠付き砂壁",
+  "block.urushi.cherry_shitamiita": "下見板張りのサクラの板材",
+  "block.urushi.cherry_shitamiita_slab": "下見板張りのサクラの板材のハーフブロック",
+  "block.urushi.cherry_board_window": "サクラの無双連子窓",
+  "block.urushi.cherry_framed_orange_plaster": "サクラの木枠付きの橙色の漆喰",
+  "block.urushi.cherry_framed_magenta_plaster": "サクラの木枠付きの赤紫色の漆喰",
+  "block.urushi.cherry_framed_light_blue_plaster": "サクラの木枠付きの空色の漆喰",
+  "block.urushi.cherry_framed_yellow_plaster": "サクラの木枠付きの黄色の漆喰",
+  "block.urushi.cherry_framed_lime_plaster": "サクラの木枠付きの黄緑色の漆喰",
+  "block.urushi.cherry_framed_pink_plaster": "サクラの木枠付きの桃色の漆喰",
+  "block.urushi.cherry_framed_gray_plaster": "サクラの木枠付きの灰色の漆喰",
+  "block.urushi.cherry_framed_light_gray_plaster": "サクラの木枠付きの薄灰色の漆喰",
+  "block.urushi.cherry_framed_cyan_plaster": "サクラの木枠付きの青緑色の漆喰",
+  "block.urushi.cherry_framed_purple_plaster": "サクラの木枠付きの紫色の漆喰",
+  "block.urushi.cherry_framed_blue_plaster": "サクラの木枠付きの青色の漆喰",
+  "block.urushi.cherry_framed_brown_plaster": "サクラの木枠付きの茶色の漆喰",
+  "block.urushi.cherry_framed_green_plaster": "サクラの木枠付きの緑色の漆喰",
+  "block.urushi.cherry_framed_red_plaster": "サクラの木枠付きの赤色の漆喰",
+  "block.urushi.cherry_framed_black_plaster": "サクラの木枠付きの黒色の漆喰",
+  "block.urushi.cherry_wall_for_framed_blocks": "サクラの壁",
+  "block.urushi.vertical_smooth_cherry_slab": "滑らかなサクラの縦ハーフブロック",
+  "block.urushi.horizontal_cherry_bars": "サクラの横向き五本柱",
+  "block.urushi.smooth_pale_oak_planks": "滑らかなペールオークの板材",
+  "block.urushi.smooth_pale_oak_slab": "滑らかなペールオークのハーフブロック",
+  "block.urushi.smooth_pale_oak_stairs": "滑らかなペールオークの階段",
+  "block.urushi.pale_oak_parapet": "ペールオークの欄干",
+  "block.urushi.pale_oak_framed_plaster": "ペールオークの木枠付き漆喰",
+  "block.urushi.pale_oak_bars": "ペールオークの五本柱",
+  "block.urushi.pale_oak_fushiranma": "ペールオークの竹節欄間",
+  "block.urushi.pale_oak_framed_wattle_and_daub": "ペールオークの木枠付き土壁",
+  "block.urushi.pale_oak_framed_sand_coast": "ペールオークの木枠付き砂壁",
+  "block.urushi.pale_oak_shitamiita": "下見板張りのペールオークの板材",
+  "block.urushi.pale_oak_shitamiita_slab": "下見板張りのペールオークの板材のハーフブロック",
+  "block.urushi.pale_oak_board_window": "ペールオークの無双連子窓",
+  "block.urushi.pale_oak_framed_orange_plaster": "ペールオークの木枠付きの橙色の漆喰",
+  "block.urushi.pale_oak_framed_magenta_plaster": "ペールオークの木枠付きの赤紫色の漆喰",
+  "block.urushi.pale_oak_framed_light_blue_plaster": "ペールオークの木枠付きの空色の漆喰",
+  "block.urushi.pale_oak_framed_yellow_plaster": "ペールオークの木枠付きの黄色の漆喰",
+  "block.urushi.pale_oak_framed_lime_plaster": "ペールオークの木枠付きの黄緑色の漆喰",
+  "block.urushi.pale_oak_framed_pink_plaster": "ペールオークの木枠付きの桃色の漆喰",
+  "block.urushi.pale_oak_framed_gray_plaster": "ペールオークの木枠付きの灰色の漆喰",
+  "block.urushi.pale_oak_framed_light_gray_plaster": "ペールオークの木枠付きの薄灰色の漆喰",
+  "block.urushi.pale_oak_framed_cyan_plaster": "ペールオークの木枠付きの青緑色の漆喰",
+  "block.urushi.pale_oak_framed_purple_plaster": "ペールオークの木枠付きの紫色の漆喰",
+  "block.urushi.pale_oak_framed_blue_plaster": "ペールオークの木枠付きの青色の漆喰",
+  "block.urushi.pale_oak_framed_brown_plaster": "ペールオークの木枠付きの茶色の漆喰",
+  "block.urushi.pale_oak_framed_green_plaster": "ペールオークの木枠付きの緑色の漆喰",
+  "block.urushi.pale_oak_framed_red_plaster": "ペールオークの木枠付きの赤色の漆喰",
+  "block.urushi.pale_oak_framed_black_plaster": "ペールオークの木枠付きの黒色の漆喰",
+  "block.urushi.pale_oak_wall_for_framed_blocks": "ペールオークの壁",
+  "block.urushi.vertical_smooth_pale_oak_slab": "滑らかなペールオークの縦ハーフブロック",
+  "block.urushi.horizontal_pale_oak_bars": "ペールオークの横向き五本柱",
+  "block.urushi.smooth_crimson_planks": "滑らかな真紅の板材",
+  "block.urushi.smooth_crimson_slab": "滑らかな真紅のハーフブロック",
+  "block.urushi.smooth_crimson_stairs": "滑らかな真紅の階段",
+  "block.urushi.crimson_framed_plaster": "真紅の木枠付き漆喰",
+  "block.urushi.crimson_framed_wattle_and_daub": "真紅の木枠付き土壁",
+  "block.urushi.crimson_framed_sand_coast": "真紅の木枠付き砂壁",
+  "block.urushi.crimson_framed_orange_plaster": "真紅の木枠付きの橙色の漆喰",
+  "block.urushi.crimson_framed_magenta_plaster": "真紅の木枠付きの赤紫色の漆喰",
+  "block.urushi.crimson_framed_light_blue_plaster": "真紅の木枠付きの空色の漆喰",
+  "block.urushi.crimson_framed_yellow_plaster": "真紅の木枠付きの黄色の漆喰",
+  "block.urushi.crimson_framed_lime_plaster": "真紅の木枠付きの黄緑色の漆喰",
+  "block.urushi.crimson_framed_pink_plaster": "真紅の木枠付きの桃色の漆喰",
+  "block.urushi.crimson_framed_gray_plaster": "真紅の木枠付きの灰色の漆喰",
+  "block.urushi.crimson_framed_light_gray_plaster": "真紅の木枠付きの薄灰色の漆喰",
+  "block.urushi.crimson_framed_cyan_plaster": "真紅の木枠付きの青緑色の漆喰",
+  "block.urushi.crimson_framed_purple_plaster": "真紅の木枠付きの紫色の漆喰",
+  "block.urushi.crimson_framed_blue_plaster": "真紅の木枠付きの青色の漆喰",
+  "block.urushi.crimson_framed_brown_plaster": "真紅の木枠付きの茶色の漆喰",
+  "block.urushi.crimson_framed_green_plaster": "真紅の木枠付きの緑色の漆喰",
+  "block.urushi.crimson_framed_red_plaster": "真紅の木枠付きの赤色の漆喰",
+  "block.urushi.crimson_framed_black_plaster": "真紅の木枠付きの黒色の漆喰",
+  "block.urushi.crimson_wall_for_framed_blocks": "真紅の壁",
+  "block.urushi.vertical_smooth_crimson_slab": "滑らかな真紅の縦ハーフブロック",
+  "block.urushi.smooth_warped_planks": "滑らかな歪んだの板材",
+  "block.urushi.smooth_warped_slab": "滑らかな歪んだのハーフブロック",
+  "block.urushi.smooth_warped_stairs": "滑らかな歪んだの階段",
+  "block.urushi.warped_framed_plaster": "歪んだの木枠付き漆喰",
+  "block.urushi.warped_framed_wattle_and_daub": "歪んだの木枠付き土壁",
+  "block.urushi.warped_framed_sand_coast": "歪んだの木枠付き砂壁",
+  "block.urushi.warped_framed_orange_plaster": "歪んだの木枠付きの橙色の漆喰",
+  "block.urushi.warped_framed_magenta_plaster": "歪んだの木枠付きの赤紫色の漆喰",
+  "block.urushi.warped_framed_light_blue_plaster": "歪んだの木枠付きの空色の漆喰",
+  "block.urushi.warped_framed_yellow_plaster": "歪んだの木枠付きの黄色の漆喰",
+  "block.urushi.warped_framed_lime_plaster": "歪んだの木枠付きの黄緑色の漆喰",
+  "block.urushi.warped_framed_pink_plaster": "歪んだの木枠付きの桃色の漆喰",
+  "block.urushi.warped_framed_gray_plaster": "歪んだの木枠付きの灰色の漆喰",
+  "block.urushi.warped_framed_light_gray_plaster": "歪んだの木枠付きの薄灰色の漆喰",
+  "block.urushi.warped_framed_cyan_plaster": "歪んだの木枠付きの青緑色の漆喰",
+  "block.urushi.warped_framed_purple_plaster": "歪んだの木枠付きの紫色の漆喰",
+  "block.urushi.warped_framed_blue_plaster": "歪んだの木枠付きの青色の漆喰",
+  "block.urushi.warped_framed_brown_plaster": "歪んだの木枠付きの茶色の漆喰",
+  "block.urushi.warped_framed_green_plaster": "歪んだの木枠付きの緑色の漆喰",
+  "block.urushi.warped_framed_red_plaster": "歪んだの木枠付きの赤色の漆喰",
+  "block.urushi.warped_framed_black_plaster": "歪んだの木枠付きの黒色の漆喰",
+  "block.urushi.warped_wall_for_framed_blocks": "歪んだの壁",
+  "block.urushi.vertical_smooth_warped_slab": "滑らかな歪んだの縦ハーフブロック",
+  "info.urushi.same_as_composter": "コンポスターと同様、右クリックのほかホッパーなどでもアイテムを投入できる。",
+  "info.urushi.fermentation_barrel_1": "ご飯8個から米麴8個、仕込み味噌8個から味噌8個を作成できる。",
+  "info.urushi.fermentation_barrel_2": "ご飯1個、米麴1個、水入り竹筒1個を入れて放置し、ガラス瓶で右クリックすることで日本酒を作成できる。",
+  "info.urushi.ochoko_1": "飲むと耐性と移動速度低下の効果が付与される。",
+  "info.urushi.ochoko_2": "何度も続けて飲むことで付与される効果のレベルや持続時間が強化される。",
+  "info.urushi.sake": "発酵用の樽にご飯1個、米麴1個、水入り竹筒1個を入れて放置し、ガラス瓶で発酵用の樽を右クリックすることで作成可能。",
+  "info.urushi.noodle": "メインハンドに麵切り包丁、オフハンドに生地を持って右クリックを押し続けると麺を作成しやすい。",
+  "item.urushi.sake": "日本酒",
+  "item.urushi.tokkuri": "とっくり",
+  "item.urushi.ochoko": "おちょこ",
+  "entity.urushi.sake_food": "日本酒",
+  "entity.urushi.tokkuri_food": "とっくり",
+  "entity.urushi.ochoko_food": "おちょこ"
+
 
 
 }
